--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,12 @@
   color:rgb(40, 40, 86);
   font-size: 20px;
 }
+
+.btn1{
+  background-color:slateblue;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor:pointer;
+  border: none;
+}
