--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,23 @@
 .student p{
   margin: 0;
 }
+
+.welcome-message{
+
+  font-size: 2em;
+  background-color: rgb(71, 234, 79);
+  color: black;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 5px;
+}
+
+.login-prompt{
+
+  font-size: 2em;
+  background-color: rgb(228, 41, 41);
+  color: black;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 5px;
+}
