--- a/src/index.css
+++ b/src/index.css
@@ -77,3 +77,31 @@
   border-radius: 5px;
   margin: 5px;
 }
+
+.list-category{
+
+  font-size: 2.5em;
+  font-weight: bold;
+  color: rgb(37, 37, 37);
+  margin-bottom: 10px;
+  text-align: center;
+  border: 3px solid;
+  border-radius: 5px;
+  background: #e39b9b;
+}
+
+.list-items{
+
+  font-size: 2em;
+  list-style: none;
+  color: rgb(68, 68, 68);
+  margin: 0;
+  text-align: center;
+}
+
+.list-items:hover{
+
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+
+}
