--- a/src/index.css
+++ b/src/index.css
@@ -105,3 +105,34 @@
   cursor: pointer;
 
 }
+
+.counter-container{
+
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.count-display{
+  font-size: 10em;
+  margin-top: 0;
+  margin-bottom: 50px;
+}
+
+.counter-button{
+  width: 150px;
+  height: 50px;
+  font-size: 1.5em;
+  font-weight: bold;
+  margin: 0px 5px;
+  background-color: rosybrown;
+  color: black;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.6s;
+}
+
+.counter-button:hover{
+
+  background-color:rgb(232, 173, 173);
+}
