--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-.card{
+/* .card{
 
   border: 1px solid black;
   border-radius: 10px;
@@ -135,4 +135,40 @@
 .counter-button:hover{
 
   background-color:rgb(232, 173, 173);
+} */
+
+
+
+/* Clock css */
+
+body{
+
+  background-image: url(assets/mountain-1.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+  align-items: center;
+}
+
+.clock-container{
+
+  backdrop-filter: blur(4px);
+  width: 100vw;
+  padding: 10px 0;
+}
+
+.clock{
+
+  color: white;
+  font-size: 6rem;
+  font-weight: bold;
+  font-family: monospace;
+  text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.76);
+  text-align: center;
+
 }
