--- a/src/index.css
+++ b/src/index.css
@@ -141,7 +141,7 @@
 
 /* Clock css */
 
-body{
+/* body{
 
   background-image: url(assets/mountain-1.jpg);
   background-position: center;
@@ -171,4 +171,12 @@ body{
   text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.76);
   text-align: center;
 
+} */
+
+
+
+/* component a css */
+.box{
+  border: 3px solid;
+  padding: 25px;
 }
